--- a/address_space/Makefile.in
+++ b/address_space/Makefile.in
@@ -221,8 +221,9 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
-UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
+UAMAPPINGS_INCLUDES = @UAMAPPINGS_INCLUDES@
+UAMAPPINGS_LIBS = @UAMAPPINGS_LIBS@
+UAMAPPING_LIBS = @UAMAPPING_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -282,7 +283,7 @@ opcuaincludedir = $(opcincludedir)/ua
 uaserverincludedir = $(opcuaincludedir)/server
 addonsincludedir = $(uaserverincludedir)/addons
 configdir = $(sysconfdir)/opcua
-AM_CPPFLAGS = -Iinclude -I$(top_srcdir)/services_registry/include $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+AM_CPPFLAGS = -Iinclude -I$(top_srcdir)/services_registry/include $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES)
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(top_srcdir)/tests
 lib_LTLIBRARIES = libaddress_space_addon.la
 addonsinclude_HEADERS = \
@@ -296,7 +297,7 @@ libaddress_space_addon_la_SOURCES = \
    src/address_space_module.cpp \
    tests/address_space_registry_test.h
 
-libaddress_space_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS)
+libaddress_space_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS)
 all: all-am
 
 .SUFFIXES:
