--- a/binary_protocol/Makefile.in
+++ b/binary_protocol/Makefile.in
@@ -251,8 +251,9 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
-UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
+UAMAPPINGS_INCLUDES = @UAMAPPINGS_INCLUDES@
+UAMAPPINGS_LIBS = @UAMAPPINGS_LIBS@
+UAMAPPING_LIBS = @UAMAPPING_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -318,7 +319,7 @@ COMMON_INCLUDES = \
   -I$(top_srcdir)/endpoint_services/include \
   -I$(top_srcdir)/services_registry/include \
   -I$(top_srcdir)/tcp_server/include \
-  $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
+  $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) \
   -Itests \
@@ -336,7 +337,7 @@ libopcua_protocol_la_SOURCES = \
  src/opc_tcp_processor.h
 
 libopcua_protocol_la_CPPFLAGS = $(COMMON_INCLUDES)
-libopcua_protocol_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS)
+libopcua_protocol_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS)
 test_opcua_protocol_addon_SOURCES = \
   src/opcua_protocol_addon.cpp \
   src/opcua_protocol_addon.h \
@@ -363,7 +364,7 @@ test_opcua_protocol_addon_SOURCES = \
   ../standard_namespace/src/standard_namespace.cpp
 
 test_opcua_protocol_addon_CPPFLAGS = $(TESTINCLUDES) $(COMMON_INCLUDES)
-test_opcua_protocol_addon_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(OPC_CLIENT_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
+test_opcua_protocol_addon_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl $(UAMAPPINGS_LIBS) $(OPC_CORE_LIBS) $(OPC_CLIENT_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS)
 all: all-am
 
 .SUFFIXES:
