--- a/builtin_server/Makefile.in
+++ b/builtin_server/Makefile.in
@@ -223,8 +223,9 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
-UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
+UAMAPPINGS_INCLUDES = @UAMAPPINGS_INCLUDES@
+UAMAPPINGS_LIBS = @UAMAPPINGS_LIBS@
+UAMAPPING_LIBS = @UAMAPPING_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -289,7 +290,7 @@ COMMON_INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/builin_server/include \
   -I$(top_srcdir)/tcp_server/include \
-   $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
+   $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES) $(OPC_CLIENT_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(top_srcdir)/tests
 lib_LTLIBRARIES = libbuiltin_server_addon.la
@@ -304,7 +305,7 @@ libbuiltin_server_addon_la_SOURCES = \
   tests/builtin_server_test.h
 
 libbuiltin_server_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
-libbuiltin_server_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) $(OPC_CLIENT_LIBS) -no-undefined
+libbuiltin_server_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS) $(OPC_CLIENT_LIBS) -no-undefined
 all: all-am
 
 .SUFFIXES:
