--- a/endpoint_services/Makefile.in
+++ b/endpoint_services/Makefile.in
@@ -243,8 +243,9 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
-UA_MAPPING_INCLUDES = @UA_MAPPING_INCLUDES@
-UA_MAPPING_LIBS = @UA_MAPPING_LIBS@
+UAMAPPINGS_INCLUDES = @UAMAPPINGS_INCLUDES@
+UAMAPPINGS_LIBS = @UAMAPPINGS_LIBS@
+UAMAPPING_LIBS = @UAMAPPING_LIBS@
 VERSION = @VERSION@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
@@ -308,7 +309,7 @@ configdir = $(sysconfdir)/opcua
 COMMON_INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/services_registry/include \
-  $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+  $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 lib_LTLIBRARIES = libendpoints_services_addon.la
@@ -324,7 +325,7 @@ libendpoints_services_addon_la_SOURCES = \
   src/endpoints_services_module.cpp
 
 libendpoints_services_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
-libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS)
+libendpoints_services_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS)
 test_endpoints_registry_SOURCES = \
   src/endpoints_parameters.cpp \
   src/endpoints_services_addon.cpp \
@@ -338,7 +339,7 @@ test_endpoints_registry_SOURCES = \
   ../services_registry/src/services_registry_impl.h
 
 test_endpoints_registry_CPPFLAGS = $(COMMON_INCLUDES) $(TESTINCLUDES)
-test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
+test_endpoints_registry_LDFLAGS = -lboost_thread -lpthread -ldl  $(UAMAPPINGS_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -Wl,-z,defs,-no-undefined
 all: all-am
 
 .SUFFIXES:
