--- a/services_registry/Makefile.am
+++ b/services_registry/Makefile.am
@@ -18,7 +18,7 @@ configdir = $(sysconfdir)/opcua
 COMMON_INCLUDES = \
   -Iinclude \
   -I$(top_srcdir)/common/include \
-  $(UA_MAPPING_INCLUDES) $(OPC_CORE_INCLUDES)
+  $(UAMAPPINGS_INCLUDES) $(OPC_CORE_INCLUDES)
 
 TESTINCLUDES = $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
 
@@ -36,7 +36,7 @@ libservices_registry_addon_la_SOURCES = \
   tests/services_registry_test.h
 
 libservices_registry_addon_la_CPPFLAGS = $(COMMON_INCLUDES)
-libservices_registry_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MAPPING_LIBS) -no-undefined
+libservices_registry_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UAMAPPINGS_LIBS) -no-undefined
 
 #TESTS = test_services_registry
 
@@ -44,5 +44,5 @@ libservices_registry_addon_la_LDFLAGS = -lpthread -ldl  $(OPC_CORE_LIBS) $(UA_MA
 
 #test_services_registry_SOURCES =
 #test_services_registry_CPPFLAGS = $(TESTINCLUDES) $(COMMON_INCLUDES)
-#test_services_registry_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UA_MAPPING_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
+#test_services_registry_LDFLAGS = -lboost_thread -lpthread -ldl -Wl,-z,defs $(UAMAPPINGS_LIBS) $(OPC_CORE_LIBS) $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) -no-undefined
 
