--- a/debian/control
+++ b/debian/control
@@ -10,13 +10,13 @@ Vcs-Git: https://github.com/treww/opcua-server.git
 Package: opcuaserver-dev
 Section: libdevel
 Architecture: any
-Depends: opcuaserver (= ${binary:Version}), opcuaclient-dev (= ${binary:Version}), libopcuacore-dev (= ${binary:Version}), opcuamappings-dev (= ${binary:Version}), libboost-system-dev 
+Depends: opcuaserver (= ${binary:Version}), opcuaclient-dev (>= 0.1.3}), libopcuacore-dev (>= 0.1.3}), opcuamappings-dev (>= 0.2.0), libboost-system-dev 
 Description: OPCUA server developer files.
 
 Package: opcuaserver
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, opcuaclient (= ${binary:Version}), libopcuacore (= ${binary:Version}), opcuamappings (= ${binary:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, opcuaclient (>= 0.1.3), libopcuacore (= 0.1.3), opcuamappings (>= 0.2.0})
 Description: OPCUA server.
 
 Package: opcuaserver-doc
