--- a/debian/control
+++ b/debian/control
@@ -9,17 +9,17 @@ Vcs-Git: https://github.com/treww/opcua-server.git
 
 Package: opcuaserver-dev
 Section: libdevel
-Architecture: any
+Architecture: amd64 i386
 Depends: opcuaserver (= ${binary:Version}), opcuaclient-dev (>= 0.1.3), libopcuacore-dev (>= 0.1.3), opcuamappings-dev (>= 0.2.0), libboost-system-dev 
 Description: OPCUA server developer files.
 
 Package: opcuaserver
 Section: net
-Architecture: any
+Architecture: amd64 i386
 Depends: ${shlibs:Depends}, ${misc:Depends}, opcuaclient (>= 0.1.3), libopcuacore (= 0.1.3), opcuamappings (>= 0.2.0)
 Description: OPCUA server.
 
 Package: opcuaserver-doc
-Architecture: all
+Architecture: any
 Description: documentation for opcuaserver
 
