--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/treww/opcua-server.git
 Package: opcuaserver-dev
 Section: libdevel
 Architecture: amd64 i386
-Depends: opcuaserver (= ${binary:Version}), opcuaclient-dev (>= 0.1.3), libopcuacore-dev (>= 0.1.3), opcuamappings-dev (>= 0.2.0), libboost-system-dev 
+Depends: opcuaserver (= ${binary:Version}), opcuaclient-dev (>= 0.1.3), libopcuacore-dev (>= 0.1.3), opcuamappings-dev (>= 0.2.0) 
 Description: OPCUA server developer files.
 
 Package: opcuaserver
