--- a/exe/Makefile.in
+++ b/exe/Makefile.in
@@ -304,7 +304,7 @@ opcuaserver_CPPFLAGS = $(COMMON_INCLUDES)
 opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UAMAPPINGS_LIBS) $(OPC_CORE_LIBS) -Wl,--no-undefined,-rpath -Wl,LIBDIR
 configdir = $(sysconfdir)/opcua
 srvconfigdir = $(configdir)/server
-srvconfig_DATA = configs/main.config
+srvconfig_DATA = configs/main.conf
 
 #upstartdir=$(sysconfdir)/init
 #upstart_DATA=configs/opcuaserver.conf
@@ -314,7 +314,7 @@ EXTRA_DIST = \
   configs/opcuaserver \
   configs/main.config \
   configs/opcuaserver.conf \
-  tests/configs/test_addon.config \
+  tests/configs/test_addon.conf \
   tests/common.cpp \
   tests/common.h \
   tests/test_addon.cpp \
